package model.global;

public enum Cmd {
    LEFT,RIGHT,UP,DOWN,IDLE,ATTACK,LEAVE_LEVEL,EXIT_GAME, RESTART, SAVE;
}
